k8s/base/service-my-app,.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: my-app 
  labels: 
    app: my-app 
spec: 
  ports: 
  - protocol: TCP 
    port: 80
    targetPort: 80 
  selector: 
    app: my-app
